--- a/_config.yml
+++ b/_config.yml
@@ -5,17 +5,26 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # `jekyll serve`. If you change this file, please restart the server process.
 
+# Site Settings
+locale                   : "zh-CN"
+title                    : "Zhenlong Yuan (袁祯泷)"
+title_separator          : "-"
+name                     : "Yi Ren (袁祯泷)"
+description              : "Master's student at ICT, UCAS. Focusing on 3DCV and VLM."
+repository               : "rayeren/rayeren.github.io"
+google_scholar_stats_use_cdn : true
+
 # google analytics
-google_analytics_id      :  # get google_analytics_id from https://analytics.google.com/analytics/
+google_analytics_id      : G-SWFCX99KQZ
 
 # SEO Related
-google_site_verification :  # get google_site_verification from https://search.google.com/search-console/about
-bing_site_verification   :  # get bing_site_verification from https://www.bing.com/webmasters/about
-baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.baidu.com/login/index?u=/site/index
+google_site_verification : b_BbOIt7d513ZXYDw-YRMicO6O5tthYiouqWDdWjGTU
+bing_site_verification   : B5AA590E7B9C03956A6F7DEC0F776211
+baidu_site_verification  : code-ZxFK3f4pfb
 
 # Site Author
 author:
-  name             : "Zhenlong Yuan"
+  name             : "Zhenlong Yuan (任意)"
   avatar           : "images/ZhenlongYuan.png"
   bio              : "Institute of Computing Technology, Chinese Academy of Sciences"
   location         : "Beijing, China"
@@ -31,15 +40,15 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : # e.g., "github username"
+  github           : "RayeRen"
   google_plus      :
   keybase          :
   instagram        :
-  impactstory      : # e.g., "https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
+  impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : # e.g., "linkedin username"
-  dblp             : # e.g., "https://dblp.org/pid/xx/xxxx.html"
-  orcid            : # e.g., "https://orcid.org/xxxx"
+  linkedin         : "rayeren"
+  dblp             : "https://dblp.org/pid/75/6568-6.html"
+  orcid            : "https://orcid.org/0000-0002-9160-3848"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
@@ -59,15 +68,12 @@ include:
   - _pages
   - files
 exclude:
-  - docs
-  - google_scholar_crawler
   - "*.sublime-project"
   - "*.sublime-workspace"
   - .asset-cache
   - .bundle
   - .jekyll-assets-cache
   - .sass-cache
-  - .github
   - CHANGELOG
   - Capfile
   - Gemfile
