--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Zhenlong Yuan (袁祯泷)"
 title_separator          : "-"
 name                     : "Zhenlong Yuan (袁祯泷)"
 description              : "Master's student at ICT, UCAS. Focusing on 3DCV and VLM."
-repository               : "rayeren/rayeren.github.io"
+repository               : "ZhenlongYuan.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
@@ -44,11 +44,11 @@ author:
   google_plus      :
   keybase          :
   instagram        :
-  impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
+  impactstory      : # "https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : "ZhenlongYuan"
-  dblp             : "https://dblp.org/pid/75/6568-6.html"
-  orcid            : "https://orcid.org/0000-0002-9160-3848"
+  dblp             : "https://dblp.org/pid/139/1635"
+  orcid            : "https://orcid.org/0009-0007-4063-6459"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
