--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "RayeRen"
+  github           : "ZhenlongYuan"
   google_plus      :
   keybase          :
   instagram        :
