--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ baidu_site_verification  : code-ZxFK3f4pfb
 
 # Site Author
 author:
-  name             : "Zhenlong Yuan (任意)"
+  name             : "Zhenlong Yuan (袁祯泷)"
   avatar           : "images/ZhenlongYuan.png"
   bio              : # "Institute of Computing Technology, Chinese Academy of Sciences"
   location         : "Beijing, China"
