--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ author:
   pubmed           : 
   googlescholar    : "https://scholar.google.co.jp/citations?user=zii-mcAAAAAJ&hl=zh-CN"
   email            : "yuanzhenlong21b@ict.ac.cn"
-  researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
+  researchgate     : "../assets/CV_ZhenlongYuan.pdf"
   uri              :
   bitbucket        :
   codepen          :
