--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "zh-CN"
 title                    : "Zhenlong Yuan (袁祯泷)"
 title_separator          : "-"
 name                     : "Zhenlong Yuan (袁祯泷)"
-description              : "Master's student at ICT, UCAS. Focusing on 3DCV and VLM."
+description              : "PhD's student at ICT, UCAS. Focusing on 3DCV and VLM."
 repository               : "ZhenlongYuan.github.io"
 google_scholar_stats_use_cdn : true
 
