--- a/_config.yml
+++ b/_config.yml
@@ -31,9 +31,9 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.co.jp/citations?user=zii-mcAAAAAJ&hl=zh-CN"
-  resume     : "../assets/CV_ZhenlongYuan.pdf"
+  resume           : "../assets/CV_ZhenlongYuan.pdf"
   email            : "yuanzhenlong21b@ict.ac.cn"
-  researchgate     : 
+  researchgate     : "../assets/CV_ZhenlongYuan.pdf"
   uri              :
   bitbucket        :
   codepen          :
